test/classes/initializers/fieldDefaultIsSuperField.good
fieldDefaultIsSuperField.chpl:14: error: Cannot access parent field 'x' during phase 1
